# near-sdk-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  improved.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  tests.yml
docs/: promises-api.md
docs/collections/: README.md  choosing.md  maps.md  prefixes.md  sets.md  storage_management.md  tree_map.md  vector.md
docs/promises/: README.md  account-operations.md  advanced-patterns.md  api-reference.md  basic-usage.md  callbacks.md  error-handling.md  promise-advanced-patterns.md  promise-examples.md  promise-quickstart.md  promise-reference.md  security.md  token-gas.md
examples/: ft_contract.py  test_fungible_token.py
examples/cross-contract/: modifier_contract.py  storage_contract.py
integration_tests/: package.json  pnpm-lock.yaml  test_base.py  test_greeting.py  test_ownership.py  test_promises_api.py  test_promises_batch.py  test_storage.py
integration_tests/collections/: collections.test.ts  contract.py  contract.wasm  pyproject.toml  test_lookup_map_performance.py  test_lookup_set_performance.py  test_tree_map_performance.py  test_unordered_map_performance.py  test_unordered_set_performance.py  test_vector.py  test_vector_contract.py  test_vector_performance.py
integration_tests/contracts/: account_operations_contract.py  base_ergonomics.py  base_ergonomics_with_exports.py  basic_contract.py  batch.py  callback_contract.py  callback_security_contract.py  error_handling_contract.py  greeting_contract.py  ownership_contract.py  promise_contract.py  storage_contract.py  token_gas_contract.py
integration_tests/promises/: test_account_operations.py  test_basic_calls.py  test_callback_security.py  test_callbacks.py  test_error_handling.py  test_token_gas.py
performance_results/: lookup_map_performance_10000.md  unordered_map_pagination_10000.md  unordered_map_performance_10000.md
src/near/: __init__.py  context.py  economics.py  math.py  misc.py  promises.py  registers.py  storage.py  types.py  validator.py
(+58 files in other folders)
