[project]
name = "near-sdk-py"
version = "0.1.2"
description = "A higher-level API for building NEAR smart contracts in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]

[[tool.mypy.overrides]]
module = ["near_py_tool.*"]
follow_untyped_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/near", "src/near_sdk_py"]
