[project]
name = "near-sdk-py"
version = "0.5.2"
description = "A higher-level API for building NEAR smart contracts in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "near-pytest>=0.5.4",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "rich>=13.9.4",
    "ruff>=0.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/near", "src/near_sdk_py"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
build_command = "uv build"

[tool.ruff.lint]
extend-select = ["I"]